--- a/index.html
+++ b/index.html
@@ -1,9 +1,61 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>Main</title>
-  </head>
-  <body>
-    <h1>Wilkommen</h1>
-    <p>Work in progress....</p>
-  </body>
+    <head>
+        <title>Home</title>
+        <link rel="stylesheet" href="./style/stylesheet.css">
+        <link rel="icon" type="image/png" href="./pictures/computer.png">
+    </head>
+    <body>
+        <div class="topnav">
+            <a class="active" href="./index.html">Home</a>
+            <a href="./software.html">Software</a>
+            <a href="./games.html">Games</a>
+        </div>
+        <div class="header">
+            <h1>Welcome!</h1>
+            <p>Guest</p>
+        </div>  
+        <div class="float-parent-element">
+            <div class="float-child-element">
+             <div class="blue">
+                <h1>Hi there my name is Johannes alias JoqarSabon and Rick 👋</h1>
+                <p>- 🔭 I’m currently working on my own projects</p>
+                <p>- 🌱 I’m currently learning Ruby</p>
+                <p>- 🤔 I’m looking for help with other programmers</p>
+                <p>- 💬 Ask me about projects</p>
+                <p>- 😄 Pronouns: He/Him</p>
+                <p>- ⚡ Fun fact I'm a Furry</p>
+                <br />
+                <h2> 🏆 &nbsp; Github profile trophy</h2>
+                <p align="left"> <a href="https://github.com/ryo-ma/github-profile-trophy"><img src="https://github-profile-trophy.vercel.app/?username=joqarsabon" alt="joqarsabon" /></a> </p>
+                <h2>💬 &nbsp;Connect with me</h2>
+                <p align="left">
+                    <a href="https://github.com/JoqarSabon" target="blank"><img align="center" src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="joqarsabon" height="40" width="40" /></a>    
+                    <a href="https://twitter.com/joqarsabon" target="blank"><img align="center" src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/twitter.svg" alt="joqarsabon" height="40" width="40" /></a>
+                </p>
+                <br />
+                <h2> 🚀 &nbsp;Some Tools I Have Used and Learned</h2>
+                <p align="left"<img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/linux/linux-original.svg" alt="linux" width="40" height="40"/> 
+                <img src="https://www.vectorlogo.zone/logos/gnu_bash/gnu_bash-icon.svg" alt="bash" width="40" height="40"/>
+                <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original-wordmark.svg" alt="html5" width="40" height="40"/>
+                <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/css3/css3-original-wordmark.svg" alt="css3" width="40" height="40"/>
+                <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/php/php-original.svg" alt="php" width="40" height="40"/> 
+                <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/python/python-original.svg" alt="python" width="40" height="40"/>
+                <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/docker/docker-original-wordmark.svg" alt="docker" width="40" height="40"/>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8a/Chef_logo.svg/1200px-Chef_logo.svg.png" alt="Chef" width="40" height="40"/>
+                <img src="https://www.vectorlogo.zone/logos/git-scm/git-scm-icon.svg" alt="git" width="40" height="40"/>
+                <img src="https://seeklogo.com/images/G/gitlab-logo-FAA48EFD02-seeklogo.com.png" alt="Gitlab" width="40" height="40"/>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/Prometheus_software_logo.svg/2066px-Prometheus_software_logo.svg.png" alt="Prometheus" width="40" height="40"/> 
+                <img src="https://www.vectorlogo.zone/logos/grafana/grafana-icon.svg" alt="grafana" width="40" height="40"/> 
+                <img src="https://static.cdnlogo.com/logos/g/62/graylog.svg" alt="graylog" width="40" height="40"/>
+                <img src="https://www.vectorlogo.zone/logos/mariadb/mariadb-icon.svg" alt="mariadb" width="40" height="40"/> <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/mongodb/mongodb-original-wordmark.svg" alt="mongodb" width="40" height="40"/>
+                <img src="https://www.vectorlogo.zone/logos/unity3d/unity3d-icon.svg" alt="unity" width="40" height="40"/> 
+                <img src="https://raw.githubusercontent.com/kenangundogan/fontisto/036b7eca71aab1bef8e6a0518f7329f13ed62f6b/icons/svg/brand/unreal-engine.svg" alt="unreal" width="40" height="40"/> </p>
+                <br />
+                <h2> 🐞 &nbsp;I can fix your bugs</h2>
+                <img class="" src="https://media.giphy.com/media/oYQ9HRm5Mo7VXeMNVR/giphy.gif" width="500" height="500" />
+             </div>
+            </div>
+          </div>
+    </body>
 </html>
