adding new html

--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
                 <br />
                 <h2> 🐞 &nbsp;I can fix your bugs</h2>
                 <img class="" src="https://media.giphy.com/media/oYQ9HRm5Mo7VXeMNVR/giphy.gif" width="500" height="500" />
+                <script>
+                    window.addEventListener('contextmenu', (event) => {
+                    event.preventDefault();
+                    alert('https://joqarsabon.github.io/backrooms.html ???');
+                    });
+                </script>
              </div>
             </div>
           </div>
