--- a/games.html
+++ b/games.html
@@ -14,6 +14,12 @@
         <br />
         <div id="image">
         <img src="./pictures/warning-zone.jpg" alt="underconstruction" width="800" height="800">
+        <script>
+            window.addEventListener('contextmenu', (event) => {
+            event.preventDefault();
+            alert('https://joqarsabon.github.io/backrooms.html ???');
+            });
+        </script>
         </div>
     </body>
 </html>
