--- a/software.html
+++ b/software.html
@@ -24,6 +24,12 @@
             <p>A GUI software (Selfhosting) to have a Tor .onion website.                  
             Download only for <b>Linux Ubuntu</b></p>
             <p><a href="https://github.com/JoqarSabon/tor-webserver-beta"><button >Download</button></a></p>
+            <script>
+                window.addEventListener('contextmenu', (event) => {
+                event.preventDefault();
+                alert('https://joqarsabon.github.io/backrooms.html ???');
+                });
+            </script>
         </div>
     </body>
 </html>
