--- a/software.html
+++ b/software.html
@@ -10,7 +10,7 @@
             <a class="active" href="./software.html">Software</a>
             <a href="./games.html">Games</a>
         </div>
-        <h1 class="h">Software Products</h1>
+        <h1 class="h">Software products</h1>
         <div class="card">
         <img src="./pictures/calculator.png" alt="calculator" style="width:100%" height="400px">
         <h1>Calculator</h1>
