--- a/404.html
+++ b/404.html
@@ -1,9 +1,13 @@
 <html>
     <head>
         <title>Error 404</title>
+        <link rel="stylesheet" href="./style/stylesheet.css">
         <link rel="icon" type="image/png" href="./pictures/computer.png">
     </head>
     <body>
-      <h1>Error 404</h1>
+    <div class="pos">
+      <h1 class="error404">404</h1>
+      <h1 class="error404">Page not found</h1>
+    </div>
     </body>
 </html>
