games.html delete scripts

--- a/games.html
+++ b/games.html
@@ -4,6 +4,7 @@
         <title>Games</title>
         <link rel="stylesheet" href="./style/stylesheet.css">
         <link rel="icon" type="image/png" href="./pictures/computer.png">
+        <script language="javascript" type="text/javascript" src="secret.js"></script>
     </head>
     <body>
         <div class="topnav">
@@ -15,12 +16,6 @@
         <br />
         <div id="image">
         <img src="./pictures/warning-zone.jpg" alt="underconstruction" width="800" height="800">
-        <script>
-            window.addEventListener('contextmenu', (event) => {
-            event.preventDefault();
-            alert('https://joqarsabon.github.io/backrooms.html ???');
-            });
-        </script>
         </div>
     </body>
 </html>
