index.html delete scripts

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Home</title>
         <link rel="stylesheet" href="./style/stylesheet.css">
         <link rel="icon" type="image/png" href="./pictures/computer.png">
+        <script language="javascript" type="text/javascript" src="secret.js"></script>
     </head>
     <body>
         <div class="topnav">
@@ -54,12 +55,6 @@
                 <br />
                 <h2> 🐞 &nbsp;I can fix your bugs</h2>
                 <img class="" src="https://media.giphy.com/media/oYQ9HRm5Mo7VXeMNVR/giphy.gif" width="500" height="500" />
-                <script>
-                    window.addEventListener('contextmenu', (event) => {
-                    event.preventDefault();
-                    alert('https://joqarsabon.github.io/backrooms.html ???');
-                    });
-                </script>
              </div>
             </div>
           </div>
