software.html delete scripts

--- a/software.html
+++ b/software.html
@@ -4,6 +4,7 @@
         <title>Software</title>
         <link rel="stylesheet" href="./style/stylesheet.css">
         <link rel="icon" type="image/png" href="./pictures/computer.png">
+        <script language="javascript" type="text/javascript" src="secret.js"></script>
     </head>
     <body>
         <div class="topnav">
@@ -25,12 +26,6 @@
             <p>A GUI software (Selfhosting) to have a Tor .onion website.                  
             Download only for <b>Linux Ubuntu</b></p>
             <p><a href="https://github.com/JoqarSabon/tor-webserver-beta"><button >Download</button></a></p>
-            <script>
-                window.addEventListener('contextmenu', (event) => {
-                event.preventDefault();
-                alert('https://joqarsabon.github.io/backrooms.html ???');
-                });
-            </script>
         </div>
     </body>
 </html>
