--- a/index.html
+++ b/index.html
@@ -19,24 +19,24 @@
         <div class="float-parent-element">
             <div class="float-child-element">
              <div class="blue">
-                <h1>Hi there my name is Johannes alias JoqarSabon and Rick 👋</h1>
-                <p>- 🔭 I’m currently working on my own projects</p>
-                <p>- 🌱 I’m currently learning Ruby</p>
-                <p>- 🤔 I’m looking for help with other programmers</p>
-                <p>- 💬 Ask me about projects</p>
-                <p>- 😄 Pronouns: He/Him</p>
-                <p>- ⚡ Fun fact I'm a Furry</p>
+                <h1>Hi there my name is Johannes <br /> alias Joqar Sabon and Rick 👋</h1>
+                <p> 🔭 I’m currently working on my own projects</p>
+                <p> 🌱 I’m currently learning Ruby</p>
+                <p> 🤔 I’m looking for help with other programmers</p>
+                <p> 💬 Ask me about projects</p>
+                <p> 😄 Pronouns: He/Him</p>
+                <p> ⚡ Fun fact I'm a Furry</p>
                 <br />
                 <h2> 🏆 &nbsp; Github profile trophy</h2>
-                <p align="left"> <a href="https://github.com/ryo-ma/github-profile-trophy"><img src="https://github-profile-trophy.vercel.app/?username=joqarsabon" alt="joqarsabon" /></a> </p>
+                <p align="center"> <a href="https://github.com/ryo-ma/github-profile-trophy"><img src="https://github-profile-trophy.vercel.app/?username=joqarsabon" alt="joqarsabon" /></a> </p>
                 <h2>💬 &nbsp;Connect with me</h2>
-                <p align="left">
+                <p align="center">
                     <a href="https://github.com/JoqarSabon" target="blank"><img align="center" src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="joqarsabon" height="40" width="40" /></a>    
                     <a href="https://twitter.com/joqarsabon" target="blank"><img align="center" src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/twitter.svg" alt="joqarsabon" height="40" width="40" /></a>
                 </p>
                 <br />
                 <h2> 🚀 &nbsp;Some Tools I Have Used and Learned</h2>
-                <p align="left"<img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/linux/linux-original.svg" alt="linux" width="40" height="40"/> 
+                <p align="center"<img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/linux/linux-original.svg" alt="linux" width="40" height="40"/> 
                 <img src="https://www.vectorlogo.zone/logos/gnu_bash/gnu_bash-icon.svg" alt="bash" width="40" height="40"/>
                 <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original-wordmark.svg" alt="html5" width="40" height="40"/>
                 <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/css3/css3-original-wordmark.svg" alt="css3" width="40" height="40"/>
