--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/docker/docker-original-wordmark.svg" alt="docker" width="40" height="40"/>
                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8a/Chef_logo.svg/1200px-Chef_logo.svg.png" alt="Chef" width="40" height="40"/>
                 <img src="https://www.vectorlogo.zone/logos/git-scm/git-scm-icon.svg" alt="git" width="40" height="40"/>
-                <img src="https://seeklogo.com/images/G/gitlab-logo-FAA48EFD02-seeklogo.com.png" alt="Gitlab" width="40" height="40"/>
+                <img src="https://about.gitlab.com/images/press/logo/print/jpg/gitlab-logo-550.jpg" alt="Gitlab" width="40" height="40"/>
                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/Prometheus_software_logo.svg/2066px-Prometheus_software_logo.svg.png" alt="Prometheus" width="40" height="40"/> 
                 <img src="https://www.vectorlogo.zone/logos/grafana/grafana-icon.svg" alt="grafana" width="40" height="40"/> 
                 <img src="https://static.cdnlogo.com/logos/g/62/graylog.svg" alt="graylog" width="40" height="40"/>
