--- a/games.html
+++ b/games.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8"/>
+    <title>Games</title>
     <link rel="manifest" href="manifest.webmanifest">
     <link rel="stylesheet" href="./style/stylesheet.css">
     <meta name="apple-mobile-web-app-capable" content="yes">
