--- a/software.html
+++ b/software.html
@@ -12,12 +12,13 @@
             <a href="./games.html">Games</a>
         </div>
         <h1 class="h">Software products</h1>
+        <div class="maincard">
         <div class="card">
-        <img src="./pictures/calculator.png" alt="calculator" style="width:100%" height="400px">
-        <h1>Calculator</h1>
-        <p>A calculator that has been programmed in Visual Basic.
-        Download only for <b>Microsoft Windows</b></p>
-        <p><a href="./software/calculator.exe"><button>Download</button></a></p>
+            <img src="./pictures/calculator.png" alt="calculator" style="width:100%" height="400px">
+            <h1>Calculator</h1>
+            <p>A calculator that has been programmed in Visual Basic.
+            Download only for <b>Microsoft Windows</b></p>
+            <p><a href="./software/calculator.exe"><button>Download</button></a></p>
         </div>
         <div class="card">
             <img src="./pictures/onion.png" alt="tor" style="width:100%" height="400px">
@@ -25,6 +26,7 @@
             <p>A GUI software (Selfhosting) to have a Tor .onion website.                  
             Download only for <b>Linux Ubuntu</b></p>
             <p><a href="https://github.com/JoqarSabon/tor-webserver-beta"><button >Download</button></a></p>
+        </div>
         </div>
     </body>
 </html>
