--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="float-parent-element">
             <div class="float-child-element">
              <div class="blue">
-                <h1>Hi there my name is Johannes <br /> alias Joqar Sabon and Rick 👋</h1>
+                <h1>Hi there my name is Johannes <br /> alias Joqar Sabon or Rick 👋</h1>
                 <p> 🔭 I’m currently working on my own projects</p>
                 <p> 🌱 I’m currently learning Ruby</p>
                 <p> 🤔 I’m looking for help with other programmers</p>
