--- a/games.html
+++ b/games.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8"/>
-    <title>Games</title>
+    <title id="page-title">Games</title>
     <link rel="manifest" href="manifest.webmanifest">
     <link rel="stylesheet" href="./style/stylesheet.css">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -10,8 +10,9 @@
     <link rel="icon" type="image/png" href="./pictures/computer.png">
     <meta name="theme-color" content="#000000" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <!-- Libs and GDJS core files : -->
+    <!-- Libs and GDJS core files : -->	
 		<script src="libs/jshashtable.js" crossorigin="anonymous"></script>
+	<script src="title.js"></script>
 	<script src="logger.js" crossorigin="anonymous"></script>
 	<script src="gd.js" crossorigin="anonymous"></script>
 	<script src="libs/rbush.js" crossorigin="anonymous"></script>
