--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
              <div class="blue">
                 <h1>Hi there my name is Johannes <br /> alias Joqar Sabon or Rick 👋</h1>
                 <p> 🔭 I’m currently working on my own projects</p>
-                <p> 🌱 I’m currently learning Ruby</p>
+                <p> 🌱 I’m currently learning Java</p>
                 <p> 🤔 I’m looking for help with other programmers</p>
                 <p> 💬 Ask me about projects</p>
                 <p> 😄 Pronouns: He/Him</p>
