--- a/games.html
+++ b/games.html
@@ -102,6 +102,7 @@
   <div class="topnav">
       <a href="./index.html">Home</a>
       <a href="./software.html">Software</a>
+	  <a href="./livestream.html">Livestream</a>
       <a class="active" href="./games.html">Games</a>
   </div>
    <h1 class="h">Javascript online game (Work in progress)</h1>
