--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <div class="topnav">
             <a class="active" href="./index.html">Home</a>
             <a href="./software.html">Software</a>
+            <a href="./livestream.html">Livestream</a>
             <a href="./games.html">Games</a>
         </div>
         <div class="header">
@@ -27,8 +28,8 @@
                 <p> 😄 Pronouns: He/Him</p>
                 <p> ⚡ Fun fact I'm a Furry</p>
                 <br />
-                <!--<h2> 🏆 &nbsp; Github profile trophy</h2>
-                <p align="center"> <a href="https://github.com/ryo-ma/github-profile-trophy"><img src="https://github-profile-trophy.vercel.app/?username=joqarsabon" alt="joqarsabon" /></a> </p>-->
+                <h2> 🏆 &nbsp; Github profile trophy</h2>
+                <p align="center"> <a href="https://github.com/ryo-ma/github-profile-trophy"><img src="https://github-profile-trophy.vercel.app/?username=joqarsabon" alt="joqarsabon" /></a> </p>
                 <h2>💬 &nbsp;Connect with me</h2>
                 <p align="center">
                     <a href="https://github.com/JoqarSabon" target="blank"><img align="center" src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="joqarsabon" height="40" width="40" /></a>    
