--- a/software.html
+++ b/software.html
@@ -9,6 +9,7 @@
         <div class="topnav">
             <a href="./index.html">Home</a>
             <a class="active" href="./software.html">Software</a>
+            <a href="./livestream.html">Livestream</a>
             <a href="./games.html">Games</a>
         </div>
         <h1 class="h">Software products</h1>
