--- a/livestream.html
+++ b/livestream.html
@@ -12,7 +12,7 @@
             <a class="active" href="./livestream.html">Livestream</a>
             <a href="./games.html">Games</a>
         </div>
-            <h1 class="h">Lofi 24/7 Music Channel</h1>
+            <h1 class="h">Lofi 24/7 Music Channel (Coming Soon)</h1>
         <div class="streamz">
             <iframe width="890" height="499" src="http://170.187.188.105:5080/LiveApp/play.html?name=XIlhnQibQzX41697098483005" frameborder="0" allowfullscreen></iframe>
         </div>
