--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Home</title>
         <link rel="stylesheet" href="./style/stylesheet.css">
         <link rel="icon" type="image/png" href="./pictures/computer.png">
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         <script language="javascript" type="text/javascript" src="secret.js"></script>
     </head>
     <body>
