--- a/games.html
+++ b/games.html
@@ -104,7 +104,7 @@
       <a href="./software.html">Software</a>
       <a class="active" href="./games.html">Games</a>
   </div>
-   <h1 class="h">Javascript online game (Work in progress)</h1>
+   <h1 class="h">Javascript online game</h1>
 	<script>
 
     (function() {
