--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
     <head>
         <title>Home</title>
+        <meta charset="UTF-8"/>
         <link rel="stylesheet" href="./style/stylesheet.css">
         <link rel="icon" type="image/png" href="./pictures/computer.png">
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         <script language="javascript" type="text/javascript" src="secret.js"></script>
+        <meta chars
     </head>
     <body>
         <div class="topnav">
