--- a/backrooms.html
+++ b/backrooms.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Backrooms</title>
+        <meta charset="UTF-8"/>
         <link rel="stylesheet" href="./style/stylesheet.css">
         <link rel="icon" type="image/png" href="./pictures/triangular-warning-sign.png">
     </head>
