--- a/games.html
+++ b/games.html
@@ -104,7 +104,8 @@
       <a href="./software.html">Software</a>
       <a class="active" href="./games.html">Games</a>
   </div>
-   <h1 class="h">Javascript online game</h1>
+   <h1 class="h">Javascript game</h1>
+   <p class="h">arrows 🡄 🡆 to move<b>,</b> Space ␣ to jump</p>
 	<script>
 
     (function() {
