--- a/games.html
+++ b/games.html
@@ -105,7 +105,7 @@
       <a class="active" href="./games.html">Games</a>
   </div>
    <h1 class="h">Javascript game</h1>
-   <p class="h">arrows 🠐 🠒 to move<b>,</b> Space ␣ to jump</p>
+   <p class="h">arrows &#129092; &#129094; to move<b>,</b> Space ␣ to jump</p>
 	<script>
 
     (function() {
