--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div class="topnav">
             <a class="active" href="./index.html">Home</a>
             <a href="./software.html">Software</a>
+            <a href="./livestream.html">Livestream</a>
             <a href="./games.html">Games</a>
         </div>
         <div class="header">
