--- a/livestream.html
+++ b/livestream.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Livestream</title>
+        <meta charset="UTF-8"/>
         <link rel="stylesheet" href="./style/stylesheet.css">
         <link rel="icon" type="image/png" href="./pictures/computer.png">
     </head>
