--- a/games.html
+++ b/games.html
@@ -106,9 +106,8 @@
       <a class="active" href="./games.html">Games</a>
   </div>
    <h1 class="h">Javascript game</h1>
-   <p class="h">arrows &#8592; &#8594; to move<b>,</b> Space ␣ to jump</p>
+   <p class="h">arrows <kbd>&#8592;</kbd> <kbd>&#8594;</kbd> to move<b>,</b> Space <kbd>␣</kbd> to jump</p>  
 	<script>
-
     (function() {
         //Initialization   
         var game = new gdjs.RuntimeGame(gdjs.projectData, {});
