--- a/software.html
+++ b/software.html
@@ -13,7 +13,7 @@
             <a href="./livestream.html">Livestream</a>
             <a href="./games.html">Games</a>
         </div>
-        <h1 class="h">Software products</h1>
+        <h1 class="h">Software projects</h1>
         <div class="maincard">
         <div class="card">
             <img src="./pictures/calculator.png" alt="calculator" style="width:100%" height="400px">
