--- a/games.html
+++ b/games.html
@@ -9,9 +9,9 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="icon" type="image/png" href="./pictures/computer.png">
     <meta name="theme-color" content="#000000" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />-->
     <!-- Libs and GDJS core files : -->	
-		<script src="libs/jshashtable.js" crossorigin="anonymous"></script>
+	<script src="libs/jshashtable.js" crossorigin="anonymous"></script>
 	<script src="title.js"></script>
 	<script src="logger.js" crossorigin="anonymous"></script>
 	<script src="gd.js" crossorigin="anonymous"></script>
