--- a/404.html
+++ b/404.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Error 404</title>
+        <title>404</title>
         <meta charset="UTF-8"/>
         <link rel="stylesheet" href="./style/stylesheet.css">
         <link rel="icon" type="image/png" href="./pictures/computer.png">
     </head>
-    <body>
-    <div class="pos">
-      <h1 class="error404">404</h1>
-      <h1 class="error404">Page not found</h1>
-    </div>
+    <body class="body404">
+         <div class="pos">
+            <h1 class="error404">404</h1>
+            <h1 class="error404">Page not found</h1>
+        </div>
+     <br />
+     <br />
+        <div class="btn404">
+          <p><a href="https://joqarsabon.com" class="text404">Back to home</a></p>   
+        </div>
     </body>
 </html>
