--- a/software.html
+++ b/software.html
@@ -30,5 +30,14 @@
             <p><a href="https://github.com/JoqarSabon/tor-webserver-beta"><button >Download</button></a></p>
         </div>
         </div>
+        <div class="maincard2">
+        <div class="card">
+            <img src="./pictures/docker.png" alt="dockertor" style="width:100%" height="400px">
+            <h1>Docker Tor-Webserver</h1>
+            <p>A Docker GUI software (Selfhosting) to have a Tor .onion website.                  
+            Download over <b>Docker Hub</b></p>
+            <p><a href="https://hub.docker.com/r/joqarsabon/tordocker-webserver"><button >Download</button></a></p>
+        </div>
+        </div>
     </body>
 </html>
