--- a/livestream.html
+++ b/livestream.html
@@ -16,7 +16,7 @@
             <h1 class="h">Lofi 24/7 Music Channel</h1>
             <p class="h">vServer Linux</p>
         <div class="streamz">
-            <iframe width="888" height="495" src="https://joqar-antmedia.de:5443/LiveApp/play.html?id=iMhlPOKlOV1iU4OP1700489348113" frameborder="0" allowfullscreen></iframe>
+            <iframe width="888" height="495" src="https://joqar-antmedia.de/LiveApp/play.html?id=iMhlPOKlOV1iU4OP1700489348113" frameborder="0" allowfullscreen></iframe>
         </div>
     </body>
 </html>
