--- a/index.html
+++ b/index.html
@@ -14,10 +14,29 @@
             <a href="./software.html">Software</a>
             <a href="./livestream.html">Livestream</a>
             <a href="./games.html">Games</a>
+            <a href="./monitoring.html" onclick="showAlert(); return false;">Status Page</a>
+            <script>
+                function showAlert() {
+                    Swal.fire({
+                        title: "Redirect",
+                        text: "You will be redirected to the UptimeRobot status page.",
+                        icon: "question",
+                        confirmButtonText: "Ok",
+                        confirmButtonColor: "#11b4d1",
+                        cancelButtonText: "No",
+                        showCancelButton: true,
+                        showCloseButton: true,
+                    }).then((result) => {
+                        if (result.isConfirmed) {
+                            window.location.href = "./monitoring.html";
+                        }
+                    });
+                }
+            </script>  
         </div>
         <div class="header">
             <h1>Welcome!</h1>
-            <p>Guest</p>
+            <p>Private Website</p>
         </div>  
         <div class="float-parent-element">
             <div class="float-child-element">
