--- a/livestream.html
+++ b/livestream.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8"/>
         <link rel="stylesheet" href="./style/stylesheet.css">
         <link rel="icon" type="image/png" href="./pictures/computer.png">
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     </head>
     <body>
         <div class="topnav">
@@ -12,6 +13,25 @@
             <a href="./software.html">Software</a>
             <a class="active" href="./livestream.html">Livestream</a>
             <a href="./games.html">Games</a>
+            <a href="./monitoring.html" onclick="showAlert(); return false;">Status Page</a>
+            <script>
+                function showAlert() {
+                    Swal.fire({
+                        title: "Redirect",
+                        text: "You will be redirected to the UptimeRobot status page.",
+                        icon: "question",
+                        confirmButtonText: "Ok",
+                        confirmButtonColor: "#11b4d1",
+                        cancelButtonText: "No",
+                        showCancelButton: true,
+                        showCloseButton: true,
+                    }).then((result) => {
+                        if (result.isConfirmed) {
+                            window.location.href = "./monitoring.html";
+                        }
+                    });
+                }
+            </script>  
         </div>
             <h1 class="h">Lofi 24/7 Music Channel</h1>
             <p class="h">vServer Linux</p>
