--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
                 <img src="./pictures/prometheus.webp" alt="Prometheus" width="40" height="40"/> 
                 <img src="./pictures/grafana.svg" alt="grafana" width="40" height="40"/> 
                 <img src="./pictures/graylog.svg" alt="graylog" width="40" height="40"/>
-                <img src="./pictures/mariadb.svg" alt="mariadb" width="40" height="40"/> <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/mongodb/mongodb-original-wordmark.svg" alt="mongodb" width="40" height="40"/>
+                <img src="./pictures/mariadb.svg" alt="mariadb" width="40" height="40"/> 
+                <img src="./pictures/mongodb.svg" alt="mongodb" width="40" height="40"/>
                 <img src="./pictures/unity.svg" alt="unity" width="40" height="40"/> 
                 <img src="./pictures/unreal.svg" alt="unreal" width="40" height="40"/> </p>
                 <br />
