--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <h2>💬 &nbsp;Connect with me</h2>
                 <p align="center">
                     <a href="https://github.com/JoqarSabon" target="blank"><img align="center" src="./pictures/github.png" alt="joqarsabon" height="40" width="40" /></a>    
-                    <a href="https://twitter.com/joqarsabon" target="blank"><img align="center" src="./pictures/twitter.svg" alt="joqarsabon" height="40" width="40" /></a>
+                    <a href="https://x.com/joqarsabon" target="blank"><img align="center" src="./pictures/twitter_x.png" alt="joqarsabon" height="40" width="40" /></a>
                 </p>
                 <br />
                 <h2> 🚀 &nbsp;Some Tools I Have Used and Learned</h2>
