--- a/livestream.html
+++ b/livestream.html
@@ -36,7 +36,7 @@
             <h1 class="h">Lofi 24/7 Music Channel</h1>
             <p class="h">vServer Linux</p>
         <div class="streamz">
-            <iframe width="888" height="495" src="https://joqar-antmedia.de/LiveApp/play.html?id=EopcaQaFZ40N9rak2851820777608424" frameborder="0" allowfullscreen></iframe>
+            <iframe width="888" height="495" src="https://joqar-antmedia.de/LiveApp/play.html?id=rick" frameborder="0" allowfullscreen></iframe>
         </div>
     </body>
 </html>
